tests/lustre/typechecking/shouldFail/inlined_contract_02.lus

node top(x: int) returns (y: int);
(*@contract
  guarantee y >= l; -- Error: Unknown identifier 'l'
*)
var l: int; -- Local variables are not visible in contracts
let
  l = x + 5;
  y = l;
tel
